--- a/Pinewood.Customers/ui/Pinewood.Customers.WebApp/Pages/Customers.cshtml
+++ b/Pinewood.Customers/ui/Pinewood.Customers.WebApp/Pages/Customers.cshtml
@@ -6,29 +6,47 @@
 }
 
 <script src="~/js/pages/customers/customers-page.js"></script>
-<script src="https://cdn.datatables.net/2.1.3/js/dataTables.js"></script>
-<link rel="stylesheet" href="https://cdn.datatables.net/2.1.3/css/dataTables.dataTables.css" />
 
-<div id="customers-holder">
-    <table id="customers-data-table" class="display">
+<!-- DataTables CSS -->
+<link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!-- DataTables JS -->
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+<!-- jQuery UI (for modal dialog) -->
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
+
+<div class="container mt-4">
+    <button id="addRowBtn" class="btn btn-primary mb-3">Add New</button>
+    <table id="customers-data-table" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
+                <th>Type</th>
                 <th>Title</th>
                 <th>First Name</th>
                 <th>Last Name</th>
+                <th>Email</th>
+                <th>Mobile Phone</th>
+                <th>Disabled</th>
+                <th>Locked</th>
+                <th>Actions</th>
             </tr>
         </thead>
-        <tbody id="customers-table-content">
-        </tbody>
+        <tbody> </tbody>
     </table>
-</div>
 
-@section Scripts{
-    <script type="text/javascript">
+     @section Scripts {
+        <script type="text/javascript">
 
-        $(document).ready(function () {
-            CustomersPageComponent.init('@Model.CustomersBaseUrl', '#customers-data-table');
-        });
+            $(document).ready(function () {
+                CustomersPageComponent.init('@Model.CustomersBaseUrl', '#customers-data-table');
+            });
 
-    </script>
-}
+        </script>
+    }
+
